Create a service folder